--- a/style.css
+++ b/style.css
@@ -7,10 +7,6 @@
     font-family: "Poppins", sans-serif;
 }
 .sidebar {
-    /* ::-webkit-scrollbar {
-        width: 0;
-    } */
-    /* position: fixed; */
     left: 0;
     top: 0;
     height: 100%;
@@ -21,9 +17,6 @@
     transition: all 0.5s ease;
 }
 .sidebar.open {
-    /* ::-webkit-scrollbar {
-        min-width: 30px;
-    } */
     width: 250px;
 }
 .sidebar .logo-details {
@@ -47,7 +40,7 @@
 .sidebar.open .logo-details .logo_name {
     opacity: 1;
 }
-.sidebar .logo-details #btn {
+.sidebar .logo-details #sidebar-toggle-btn {
     position: absolute;
     top: 50%;
     right: 0;
@@ -59,7 +52,7 @@
     cursor: pointer;
     transition: all 0.5s ease;
 }
-.sidebar.open .logo-details #btn {
+.sidebar.open .logo-details #sidebar-toggle-btn {
     text-align: right;
 }
 .sidebar i {
@@ -212,29 +205,16 @@
     width: 50px;
     background: none;
 }
-.home-section {
-    position: relative;
-    background: #e4e9f7;
-    min-height: 100vh;
-    top: 0;
-    left: 78px;
-    width: calc(100% - 78px);
-    transition: all 0.5s ease;
-    z-index: 2;
-}
-.sidebar.open ~ .home-section {
-    left: 250px;
-    width: calc(100% - 250px);
-}
-.home-section .text {
-    display: inline-block;
-    color: #ffffff;
-    font-size: 25px;
-    font-weight: 500;
-    margin: 18px;
-}
-@media (max-width: 420px) {
+
+/* @media (max-width: 420px) {
     .sidebar li .tooltip {
         display: none;
     }
-}
+} */
+
+/* @media all and (min-width: 500px) and (max-width:1000px) {
+    .sidebar {
+        background-color: #4a4dff;
+        width: 78px !important;
+    }
+} */
